syntax = "proto3";

package app.sharetrip.route;

option go_package = "github.com/Jocerdikiawann/server_share_trip/model/proto/route";
option java_multiple_files = true;

message RouteRequest { string id = 1; }

message LocationRequest {
  string googleId = 1;
  Point point = 2;
}

message DestintationAndPolylineRequest {
  string googleId = 1;
  Point destination = 2;
  RoutePolyline polyline = 3;
}

message LocationResponse {
  bool success = 1;
  string message = 2;
  optional Point point = 3;
}

message DestintationAndPolylineResponse {
  bool success = 1;
  string message = 2;
  optional RoutePolyline data = 3;
  optional Point destination = 4;
}

message Point {
  double latitude = 1;
  double longitude = 2;
}

message RoutePolyline { repeated Point points = 1; }